# presto

./: .pre-commit-config.yaml  .secrets.baseline  .whitesource  Dockerfile-native  Dockerfile-native-debug  README.md  pom.xml  whitesource.config
.github/workflows/: product-tests-specific-environment.yml  tests.yml
presto-bigquery/: pom.xml
presto-common/: pom.xml
presto-delta/: pom.xml
presto-druid/: pom.xml
presto-hive/: pom.xml
presto-hive-function-namespace/: pom.xml
presto-hive-hadoop2/: pom.xml
presto-hive-metastore/: pom.xml
presto-hudi/: pom.xml
presto-iceberg/: pom.xml
presto-jdbc/: pom.xml
presto-jmx/: pom.xml
presto-kafka/: pom.xml
presto-kudu/: pom.xml
presto-local-file/: pom.xml
presto-main/: pom.xml
presto-main-base/: pom.xml
presto-mongodb/: pom.xml
presto-mysql/: pom.xml
presto-native-execution/: CMakeLists.txt  Makefile  entrypoint.sh  pom.xml
presto-native-execution/etc/: config.properties
presto-native-execution/presto_cpp/main/common/process/tests/: CMakeLists.txt  IBMSignalHandlerTest.cpp
presto-native-tests/: pom.xml
presto-optplus/: Readme.md  pom.xml
presto-parquet/: pom.xml
presto-pinot/: pom.xml
presto-pinot-toolkit/: pom.xml
presto-plan-checker-router-plugin/: pom.xml
presto-prometheus/: pom.xml
presto-rcfile/: pom.xml
presto-resource-group-managers/: pom.xml
presto-session-property-managers/: pom.xml
presto-spark-base/: pom.xml
presto-spark-testing/: pom.xml
presto-sqlserver/: pom.xml
presto-tests/: pom.xml
presto-thrift-spec/: pom.xml
presto-verifier/: pom.xml
(+334 files in other folders)
